# Tiny-OneM2M-C-Language

./: .$Diagram.drawio.bkp  .$Diagram.drawio.dtmp  .gitignore  Diagram.drawio  ONTOLOGY.md  README.md  delete_times.csv  delete_times_openmtc.csv  docker-compose.yaml  expirationTimeTest.py  first_curl_times.csv  get_times.csv  get_times_openmtc.csv  index.html  post_times.csv  post_times_openmtc.csv  put_times.csv  pyproject.toml  smart-switch.py  test1.sh  test2 2.sh  test2.1.sh  test2.sh  test4.sh  test4copy.sh  testTimeMeasure.sh  testes.xlsx  three_curl_times.csv
ACME-oneM2M-CSE/: README.md
Report/: cas-refs.bib  cas-sc-template.tex  main.tex
Tiny-CSE/: .config  Makefile  README.md  tiny-oneM2M.db-journal
Tiny-CSE/include/: AE.h  CIN.h  CNT.h  CSE_Base.h  Common.h  HTTP_Server.h  MTC_Protocol.h  Response.h  Routes.h  Signal.h  Signals.h  Sqlite.h  Types.h  Utils.h
Tiny-CSE/src/: AE.c  CIN.c  CNT.c  CSE_Base.c  HTTP_Server.c  MTC_Protocol.c  Response.c  Routes.c  SUB.c  Signal.c  Signals.c  Sqlite.c  main.c  (+3 more)
TinyOneM2M/: CMakeLists.txt  README.md  valgrind-docker.sh
TinyOneM2M/include/: Utils.h
TinyOneM2M/src/: AE.c  CIN.c  CNT.c  CSE_Base.c  MTC_Protocol.c  Response.c  Routes.c  SUB.c  Sqlite.c  Utils.c
TinyOneM2M/tests/: test_ae.py  test_cin.py  test_cnt.py  test_cnt_cin.py  test_sub.py
TinyOneM2M/tests/entities/: AE.py  CIN.py  CNT.py  SUB.py
mqtt-server/: example
report_tests/: Diagram.drawio  databaseNormVSDenorm.py  delete_times.csv  get_times.csv  minimalHardware.sh  post_times.csv  post_times_openmtc.csv  put_times.csv  second_curl_times.csv  smart-switch.py  test1.sh  test2.1.sh  test4.sh  test4copy.sh
(+3 files in other folders)
